       respectively. Using factors/values greater than 1.0/100% causes
       pixels with non-zero alpha value to have it increased.
     * ~BL(radius): blur an image by the given radius.
   * Added the transparent version of Kitty's portraits.
   * Rewrote the drawing engine for the new widgets.
   * Enabled the new dialogs when a new portrait is available.
 * Language and i18n:
   * Renamed the --dummylocales parameter to --dummy-locales.
   * Fixed the po extraction tool to also include the id field.
   * updated translations: Chinese (Simplified), Czech, Danish, Dutch, Finnish,
     French, Galician, German, Hungarian, Italian, Lithuanian, Polish, Slovak,
     Spanish, Turkish
 * Terrain:
   * New graphic variations for Oasis (Dd^Do) terrain.
   * Added a new invisible impassable overlay terrain, which can be painted on
     top of any (non-layered) terrain to make the hex impassable.
 * Unit changes and balancing:
   * Decreased the range attack of the Drake Flare from 7-4 to 6-4.
   * Decreased the range attack of the Drake Flamehart from 9-4 to 8-4.
   * Increased the cost of the Goblin Spearman from 8 to 9.
   * Decreased the cost of the Sergeant from 20 to 19.
   * Decreased the HP of the Sergeant from 36 to 32.
   * Decreased the HP of the Lieutenant from 48 to 40.
   * Decreased the melee attack of the Lieutenant from 9-3 to 8-3.
   * Decreased the HP of the General from 58 to 50.
   * Decreased the HP of the Grand Marshal from 68 to 60.
 * User interface:
   * Recruit, recall, unit-list and create-unit dialogs display the
     selected unit/unit-type's race.
   * Improved appearance of progress bars besides the loading-screen
     one.
   * Rewrote the layout algorithm for the new widgets.
   * Fixed the font loading when the data directory is overridden.
   * Removed text wrapping around background image in story screens; it is
     better to always use the whole screen width if possible (fixes the